Fixed rendering of long headings that overflow horizontally

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,2 +1,4 @@
 h1, h2, h3, h4
   overflow-wrap break-word
+  max-width 100vw
+  hyphens auto
